# prune-lang

./: CHANGELOG.md  Cargo.toml
benches/: avl_tree_bad.pr  avl_tree_gen.pr  avl_tree_good.pr  binary_arith.pr  concat_backward.pr  test_benches.rs  unary_arith.pr
examples/arith/: binary_arith.pr
src/: main.rs
src/cli/: args.rs  pipeline.rs
src/interp/: config.rs  mod.rs  progagate.rs  runner.rs  strategy.rs
src/interp/solver/: common.rs  smtlib.rs
src/logic/: ast.rs  compile.rs  elaborate.rs  normalize.rs  translate.rs
src/syntax/: ast.rs  lexer.rs  parser.rs
src/tych/: check.rs  rename.rs
src/utils/: env_map.rs  ident.rs  intern.rs  term.rs  unify.rs
tests/: test_examples.rs
