[package]
name = "prune-lang"
version = "0.2.1"
authors = ["Anton Ping <antonping1999@gmail.com>"]
edition = "2024"
description = "Prune is a constraint logic programming language with branching heuristic."
readme = "README.md"
repository = "https://github.com/AntonPing/prune-lang"
license = "Apache-2.0"
keywords = ["logic-programming", "dsl", "prolog", "kanren", "smt"]
categories = ["command-line-utilities", "compilers"]

[[bin]]
name = "prune"
path = "src/main.rs"

[dependencies]
once_cell = "1.21.3"
logos = "0.16.1"
snailquote = "0.3.1"
itertools = "0.14.0"
rand = "0.10.0"
easy-smt = "0.3.2"
clap = { version = "4.5.60", features = ["derive"] }

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "test_benches"
harness = false
